[workspace.package]
authors = ["rok3tt"]
license = "MIT"
repository = "https://github.com/rok3tt/roketok.git"

[patch.crates-io]
roketok = { path = "./" }

[package]
authors = { workspace = true }
name = "roketok"
version = "0.1.4"
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
description = """
This crate makes it easy for anyone to setup tokenization. It was primarily
created because I got sick of writing tokenizers every time I wanted to parse
something, so a lot of this is just for my own will but use this as you'd like.
"""

[features]

[dependencies]
