[package]
authors = ["rok3tt"]
name = "roketok"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rok3tt/roketok.git"
description = """
This crate provides a way to simply set up a tokenizer and use it.
Not recommended for simple tokenizers as this crate adds a bunch of stuff
to support many if not all kinds of tokenizers.
"""

[features]

[dependencies]
